fix: update input font size for improved readability
Changed the font size of input elements in input.css from small to medium to enhance readability and user experience.

--- a/packages/ds/styles/src/styles/components/input.css
+++ b/packages/ds/styles/src/styles/components/input.css
@@ -11,7 +11,7 @@
     color: var(--ds-text-default);
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 
-    font-size: var(--ds-font-size-sm);
+    font-size: var(--ds-font-size-md);
     line-height: var(--ds-line-height-normal);
 
     transition:
